# katip-syslog

./: katip-syslog.cabal  stack.yaml
src/Katip/Scribes/: Syslog.hs
test/: Main.hs
