name:                katip-syslog
version:             0.1.2.1
synopsis:            Syslog Katip Scribe
description:         A simple Katip Scribe which logs to syslog
homepage:            https://github.com/iconnect/katip-syslog#readme
license:             BSD3
license-file:        LICENSE
author:              Alfredo Di Napoli
maintainer:          chrisd@irisconnect.co.uk
copyright:           2017-2019 IRIS Connect Engineering Team
category:            Web
build-type:          Simple
extra-source-files:  README.md
bug-reports:         http://github.com/iconnect/katip-syslog/issues

cabal-version:       >=1.10

Source-Repository head
    type:               git
    location:           https://github.com/iconnect/katip-syslog.git

library
  hs-source-dirs:      src
  exposed-modules:     Katip.Scribes.Syslog
  build-depends:       base
                     , katip >= 0.3.1.5
                     , hsyslog >= 5
                     , text
                     , bytestring
  ghc-options:         -Wall
  default-language:    Haskell2010

executable katip-syslog-test
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , katip
                     , katip-syslog
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/iconnect/katip-syslog
